--- a/chris/w04/d02/Cook_book/app/views/books/index.html.erb
+++ b/chris/w04/d02/Cook_book/app/views/books/index.html.erb
@@ -6,7 +6,9 @@
 		<% @books.each do |book|  %>
 		<li>
 			<h3><%= link_to book.title, book %></h3>
+      <%= image_tag book.image %>
 			<p><%= book.chef %></p>
+
 			
 
 		</li>	
