--- a/chris/w04/d02/Cook_book/app/views/recipes/_form.html.erb
+++ b/chris/w04/d02/Cook_book/app/views/recipes/_form.html.erb
@@ -10,7 +10,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :cooktime %>  
+    <%= f.label :cooktime, 'Cook time' %>  
     <%= f.text_field :cooktime %> 
   </div>  
 
@@ -21,7 +21,7 @@
 
     <div class="form-group">
     <%= f.label :instructions %>  
-    <%= f.text_field :instructions %> 
+    <%= f.text_area :instructions %> 
   </div>  
 
 
