--- a/chris/w04/d02/Cook_book/app/views/pages/index.html.erb
+++ b/chris/w04/d02/Cook_book/app/views/pages/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Cookbook</h1>
 
+<ul>
+      
+    <li>
+      Books
+    </li>
+
+    <li>
+      Recipes
+    </li>
+
+    <li>
+      Ingredients
+    </li>
+
+</ul>
