--- a/chris/w04/d02/Cook_book/app/views/recipes/show.html.erb
+++ b/chris/w04/d02/Cook_book/app/views/recipes/show.html.erb
@@ -1,11 +1,13 @@
-<h1>Show Page</h1>
 
     <h2><%= @recipe.name %></h2>
+   
+
     <div>Course: <%= @recipe.course %></div>
     <div>Cook time:<%= @recipe.cooktime %></div>
     <div>Serving size:<%= @recipe.servingsize %></div>
     <div>Instructions: <%= @recipe.instructions %></div>
-    <div><%= image_tag @recipe.image %></div>
+    <div>Featured in: <%= @recipe.book.title %></div>
+    <div><%= image_tag @recipe.image  %></div>
 
 
   <p><%= link_to 'Edit', edit_recipe_path(@recipe) %> |
