--- a/chris/w04/d02/Cook_book/app/views/layouts/application.html.erb
+++ b/chris/w04/d02/Cook_book/app/views/layouts/application.html.erb
@@ -2,14 +2,16 @@
 <html>
 <head>
   <title>CookBook</title>
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<h1> The Ramsay collection</h1>
 <%= render 'shared/navigation' %>
+<p>
 <%= yield %>
-
+</p>
 </body>
 </html>
