--- a/chris/w04/d02/Cook_book/app/views/recipes/index.html.erb
+++ b/chris/w04/d02/Cook_book/app/views/recipes/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Recipes</h2>
 
-<p><%= link_to "Add recipe", new_recipe_path %></p>
+<h4><%= link_to "+ Add recipe", new_recipe_path %></h4>
 
 <ul>
     <% @recipes.each do |recipe|  %>
