--- a/chris/w04/d02/Cook_book/app/assets/stylesheets/application.css
+++ b/chris/w04/d02/Cook_book/app/assets/stylesheets/application.css
@@ -13,22 +13,28 @@
  *= require_tree .
  *= require_self
  */
+ @import url(http://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here);
 
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Just Me Again Down Here', cursive;
     font-size: 2em;
     font-weight: 100;
     color: black;
     background-color: white;
 }
 
+#nav_bar {
+    width: 10%;
+    float: center;
+    display: block;
+}
 
 
 
 html {
-    width: 70%;
+    width: 90%;
     height: 100%;
     margin: 0 auto;
 }
@@ -40,7 +46,7 @@ h5,
 h6 {
     margin: 0 0 35px;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Just Me Again Down Here', cursive;
     font-weight: 100;
     letter-spacing: 1px;
 }
@@ -48,10 +54,8 @@ h6 {
 h1{
 
   font-size: 2em;
-  text-align: left;
+  text-align: center;
   line-height: .6em;
-  background-color:black;
-  color: white;
   padding: 20px;
   display: relative;
 
@@ -110,3 +114,11 @@ padding: 20px;
     float: left;
 }
 
+a{
+text-decoration: none;
+
+}
+
+.field_with_errors input {
+  border: 1px solid red;
+}
