--- a/chris/w04/d02/Cook_book/app/views/books/_form.html.erb
+++ b/chris/w04/d02/Cook_book/app/views/books/_form.html.erb
@@ -1,3 +1,12 @@
+<% unless @book.errors.empty? %>
+<ul id="errors">
+<% @book.errors.full_messages.each do |error| %>
+<li>Oh no! <%= error %></li>
+<% end %>
+</ul>
+<% end %>
+
+
 <%= form_for @book do |f| %>
 	<div class="form-group">
 		<%= f.label :title %>
