--- a/chris/w04/d02/Cook_book/app/views/recipes/_form.html.erb
+++ b/chris/w04/d02/Cook_book/app/views/recipes/_form.html.erb
@@ -30,6 +30,11 @@
     <%= f.text_field :image %>  
   </div>   
 
+    <div class="form-group">
+    <%= f.label :ingredient_ids %> 
+    <%= f.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name %>  
+  </div> 
+
   <div class="form-group">
     <%= f.label :book_id %> 
     <%= f.collection_select :book_id, Book.all, :id, :title %>  
