--- a/chris/w04/d02/Cook_book/app/views/ingredients/index.html.erb
+++ b/chris/w04/d02/Cook_book/app/views/ingredients/index.html.erb
@@ -1,17 +1,17 @@
-<h2>Ingredients</h2>
-
+<div id="left_image"><h2>Ingredients</h2></div>
+<div id="add_item">
 <h4><%= link_to "+ Add Ingredients", new_ingredient_path %></h4>
+</div>
 
-<ul>
     <% @ingredients.each do |ingredient|  %>
-    <li>
+   <div id="image_item_box">
       <h3><%= link_to ingredient.name, ingredient %></h3>
       <p><%= image_tag ingredient.image %>
 </p>
+</div>
     
 
       
 
-    </li> 
+   
     <% end %>
-</ul>
