--- a/chris/w04/d02/Cook_book/app/assets/stylesheets/application.css
+++ b/chris/w04/d02/Cook_book/app/assets/stylesheets/application.css
@@ -18,7 +18,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: 'Just Me Again Down Here', cursive;
+    font-family: 'Just Me Again Down Here', arial;
     font-size: 2em;
     font-weight: 100;
     color: black;
@@ -26,7 +26,7 @@ body {
 }
 
 #nav_bar {
-    width: 10%;
+    width: 100%;
     float: center;
     display: block;
 }
@@ -46,9 +46,10 @@ h5,
 h6 {
     margin: 0 0 35px;
     text-transform: uppercase;
-    font-family: 'Just Me Again Down Here', cursive;
+    font-family: 'Just Me Again Down Here', arial;
     font-weight: 100;
     letter-spacing: 1px;
+
 }
 
 h1{
@@ -94,6 +95,7 @@ li{
 
 img{
 max-width: 200px;
+max-height: 200px;
 padding: 20px;
 }
 
@@ -121,4 +123,16 @@ text-decoration: none;
 
 .field_with_errors input {
   border: 1px solid red;
+}
+
+#image_item_box{
+width: 25%;
+height: 300px;
+float: left;
+padding: 10px;
+}
+
+#add_item{
+float: right;
+
 }
