--- a/chris/w04/d02/Cook_book/app/views/recipes/index.html.erb
+++ b/chris/w04/d02/Cook_book/app/views/recipes/index.html.erb
@@ -2,14 +2,13 @@
 
 <h4><%= link_to "+ Add recipe", new_recipe_path %></h4>
 
-<ul>
+
     <% @recipes.each do |recipe|  %>
-    <li>
+    <div id="image_item_box">
       <h3><%= link_to recipe.name, recipe %></h3>
-      <p><%= image_tag recipe.image %><br>
-          <%= recipe.course %></p>
+      <p><%= image_tag recipe.image %></p>
+      </div>
       
 
-    </li> 
+    
     <% end %>
-</ul>
