--- a/chris/w04/d02/Cook_book/app/views/recipes/show.html.erb
+++ b/chris/w04/d02/Cook_book/app/views/recipes/show.html.erb
@@ -2,16 +2,17 @@
     <h2><%= @recipe.name %></h2>
    
 
-    <div>Course: <%= @recipe.course %></div>
-    <div>Cook time:<%= @recipe.cooktime %></div>
-    <div>Serving size:<%= @recipe.servingsize %></div>
-    <div>Instructions: <%= @recipe.instructions %></div>
-    <div>Featured in: <%= @recipe.book.title %></div>
-    <div> Ingredients <% @recipe.ingredients.each do |ingredients|  %>
-    <%=  %>
+    <div><strong>Course: </strong><%= @recipe.course %></div>
+    <div><strong>Cook time: </strong><%= @recipe.cooktime %></div>
+    <div><strong>Serving size: </strong><%= @recipe.servingsize %></div>
+    <div> <strong>Ingredients: </strong><% @recipe.ingredients.each do |ingredients|  %>
+    <%= ingredients.name  %>,
     <% end %></div>
+    <div><strong>Instructions: </strong><%= @recipe.instructions %></div>
+    <div><strong>Featured in: </strong><%= @recipe.book.title %></div>
+
     <div><%= image_tag @recipe.image  %></div>
 
 
-  <p><%= link_to 'Edit', edit_recipe_path(@recipe) %> |
-  <%= link_to 'Destroy', @recipe, method: :delete, data: {confirm: 'Are you sure?'} %></p>
+  <h6><%= link_to 'Edit', edit_recipe_path(@recipe) %> |
+  <%= link_to 'Destroy', @recipe, method: :delete, data: {confirm: 'Are you sure?'} %></h6>
