--- a/chris/w04/d02/Cook_book/app/views/shared/_navigation.html.erb
+++ b/chris/w04/d02/Cook_book/app/views/shared/_navigation.html.erb
@@ -1,7 +1,9 @@
 <div id="nav_bar">
 
-    <h4 id="nav_bar"><%= link_to 'Books', books_path %></h4></div>
-    <h4 id="nav_bar"><%= link_to 'Recipes', recipes_path %></h4></div>
-    <h4 id="nav_bar"><%= link_to 'Ingredients', ingredients_path %></h4></div>
+    <h3>
+    <%= link_to 'Home', books_path %>
+    <%= link_to 'Books', books_path %>
+    <%= link_to 'Recipes', recipes_path %>
+    <%= link_to 'Ingredients', ingredients_path %></h3>
 </div>
 	
