--- a/chris/w04/d03/tunr/app/views/artists/index.html.erb
+++ b/chris/w04/d03/tunr/app/views/artists/index.html.erb
@@ -1,9 +1,11 @@
 <h2>Artists</h2>
-
+<div id="add_button">
 <%= link_to "Add Artists", new_artist_path %>
-<p>
-<% @artist.each do |artist|  %>
+</div>
+<br>
 
+<% @artist.each do |artist|  %>
+<div id="list_items">
 <%= link_to artist.name, artist  %>
-</p>
+</div>
 <% end %>
