--- a/chris/w04/d03/tunr/app/views/artists/show.html.erb
+++ b/chris/w04/d03/tunr/app/views/artists/show.html.erb
@@ -6,12 +6,10 @@
   
     <div>Biography: <%= @artist.bio %></div>
 
-    <% @artist.songs.each do |songs|  %>
-
-    <%= songs.name  %>
-
-    <% end %>
-   
+   <% @artist.songs.each do |song| %>
+    
+      <div><%= link_to song.name, song %></div>
+      <% end -%>
 
   <p><%= link_to 'Edit', edit_artist_path(@artist) %> |
   <%= link_to 'Destroy', @artist, method: :delete, data: {confirm: 'Are you sure?'} %></p>
