--- a/chris/w04/d03/tunr/app/assets/stylesheets/application.css
+++ b/chris/w04/d03/tunr/app/assets/stylesheets/application.css
@@ -13,3 +13,99 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+    width: 100%;
+    height: 100%;
+    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 2em;
+    font-weight: 100;
+    color: black;
+    background-color: white;
+}
+
+
+
+
+html {
+    width: 70%;
+    height: 100%;
+    margin: 0 auto;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0 0 35px;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 100;
+    letter-spacing: 1px;
+    display: block;
+
+}
+
+h1{
+
+  font-size: 2em;
+  text-align: left;
+  line-height: .6em;
+  padding: 20px;
+  display: relative;
+
+}
+p {
+    margin: 0 0 25px;
+    font-size: 18px;
+    line-height: 1.5;
+    font-weight: 200;
+}
+
+a {
+
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    color: tomato;
+    
+
+}
+
+a:hover,
+a:focus {
+    text-decoration: none;
+
+}
+
+
+header{
+margin: 0 auto;
+text-align: center;
+}
+
+li{
+    list-style: none;
+    line-height: 1.5em;
+}
+
+#list_items{
+display: inline-block;
+background-color: salmon;
+line-height: 2em;
+}
+
+#nav_bar{
+display: inline-block;
+background-color: coral;
+color: white;
+text-decoration: none;
+}
+
+#add_button{
+display: inline-block;
+background-color: ;
+color: white;
+text-decoration: none;
+}
