--- a/chris/w04/d03/tunr/app/views/songs/_form.html.erb
+++ b/chris/w04/d03/tunr/app/views/songs/_form.html.erb
@@ -16,7 +16,7 @@
   </div>
 
     <div class="form-group">
-    <%= f.label :artist_ids %> 
+    <%= f.label :artist_id %> 
     <%= f.collection_select :artist_id, Artist.all, :id, :name %>  
     </div> 
 
