--- a/chris/w04/d03/tunr/app/views/welcome/index.html.erb
+++ b/chris/w04/d03/tunr/app/views/welcome/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+
+<h2>Play now</h2>
+
+<% @playlists.each do |playlist| %>
+
+  <h3><%= playlist.name %></h3>
+  <p><%= playlist.description.truncate(100) %></p>
+
+<% end %>
+
