--- a/chris/w04/d03/tunr/app/views/playlists/show.html.erb
+++ b/chris/w04/d03/tunr/app/views/playlists/show.html.erb
@@ -5,7 +5,8 @@
 
 
   
-
+<% if user_signed_in? && (current_user.admin? || current_user.playlist_ids.include?(@playlist.id))%>
 
   <p><%= link_to 'Edit', edit_playlist_path(@playlist) %> |
   <%= link_to 'Destroy', @playlist, method: :delete, data: {confirm: 'Are you sure?'} %></p>
+<% end -%>
