--- a/chris/w04/d03/tunr/app/views/artists/index.html.erb
+++ b/chris/w04/d03/tunr/app/views/artists/index.html.erb
@@ -1,11 +1,15 @@
 <h2>Artists</h2>
-<div id="add_button">
-<%= link_to "Add Artists", new_artist_path %>
-</div>
-<br>
 
+<% if user_signed_in? && current_user.admin? %>
+    <div id="add_button">
+        <%= link_to "+ Add Artists", new_artist_path %>
+    </div>
+<% end %>
+
+<p>
 <% @artist.each do |artist|  %>
 <div id="list_items">
 <%= link_to artist.name, artist  %>
 </div>
 <% end %>
+</p>
