--- a/chris/w04/d03/tunr/app/views/artists/show.html.erb
+++ b/chris/w04/d03/tunr/app/views/artists/show.html.erb
@@ -10,6 +10,7 @@
     
       <div><%= link_to song.name, song %></div>
       <% end -%>
-
+<% if user_signed_in? && current_user.admin? %>
   <p><%= link_to 'Edit', edit_artist_path(@artist) %> |
   <%= link_to 'Destroy', @artist, method: :delete, data: {confirm: 'Are you sure?'} %></p>
+<% end %>
