--- a/chris/w04/d03/tunr/app/views/songs/index.html.erb
+++ b/chris/w04/d03/tunr/app/views/songs/index.html.erb
@@ -1,7 +1,10 @@
+<h2>Songs</h2>
 
+<% if user_signed_in? && current_user.admin? %>
 <div id="add_button">
-<%= link_to "New Song", new_song_path %>
+<%= link_to "+ New Song", new_song_path %>
 </div>
+<% end -%>
 <p>
 
 <% @song.each do |song|  %>
