--- a/chris/w04/d03/tunr/app/views/songs/show.html.erb
+++ b/chris/w04/d03/tunr/app/views/songs/show.html.erb
@@ -5,6 +5,7 @@
     Genre: <%= @song.genre %>
 
    
-
+<% if user_signed_in? && current_user.admin? %>
   <p><%= link_to 'Edit', edit_song_path(@song) %> |
   <%= link_to 'Destroy', @song, method: :delete, data: {confirm: 'Are you sure?'} %></p>
+<% end -%>
