--- a/chris/w04/d03/tunr/app/views/welcome/index.html.erb
+++ b/chris/w04/d03/tunr/app/views/welcome/index.html.erb
@@ -3,8 +3,9 @@
 
 <% @playlists.each do |playlist| %>
 
-  <h3><%= playlist.name %></h3>
-  <p><%= playlist.description.truncate(100) %></p>
-
+  <p>
+  <h3><%= link_to playlist.name, playlist %></h3>
+  <%= playlist.description.truncate(100) %>
+  </p>
 <% end %>
 
