Feature: look at aparments; scenario: one apartment and no apartments

--- a/chris/w10/hairy_bnb/app/views/apartments/index.html.erb
+++ b/chris/w10/hairy_bnb/app/views/apartments/index.html.erb
@@ -1,1 +1,6 @@
+<%= @apartments.each do |apartment| %>
+<%= apartment.title %>
+<% end %>
+<% if @apartments.count == 0 %>
 No apartments available
+<% end %>
